# ai-agents-workshop

./: .env-example  .gitignore  .mcp.json  404.html  AGENTS.md  CLAUDE.md  README.md  agent.conf  ai-gh.sh  docker-compose.langfuse.yml  docker-compose.yml  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  pyproject.toml  sitemap.xml
.claude/: settings.json
.github/workflows/: deploy-docs.yml
app/: __init__.py  api.py  llm.py  models.py  store.py  ui.py
contributing/: index.html
data/: README.md  patient_specs.json  schema.json  validate_patients.py
data/patients/: patient_001.json  patient_002.json  patient_003.json  patient_004.json  patient_005.json  patient_006.json  patient_007.json  patient_008.json  patient_009.json  patient_010.json  patient_011.json  patient_012.json
docs/: .gitignore  Makefile  README.md  base.yml  mkdocs.yml  requirements.txt
docs/content/: .pages  contributing.md  getting-started.md  index.md  lab-1.md  lab-2.md  lab-3.md  lab-4.md  prerequisites.md  resources.md  slides.md
docs/content/planning/: index.md
docs/content/reference/: manual-agent.md
docs/docs/: .pages  contributing.md  index.md  lab-1.md  lab-2.md  lab-3.md  lab-4.md  prerequisites.md
docs/docs/planning/: index.md
docs/superpowers/plans/: 2026-04-27-lab4-securing-agent-data.md
docs/superpowers/specs/: 2026-04-27-lab4-securing-agent-data-design.md
getting-started/: index.html
lab-1/: index.html
lab-2/: index.html
lab-3/: index.html
lab-4/: index.html
lab1/agent/: agent.py  api.py  models.py  run.py  store.py  tools.py
lab2/agent/: __init__.py  agent.py  api.py  models.py  run.py  store.py  tools.py
lab2/agent/observability/: __init__.py  masking.py
lab3/agent/: agent.py  api.py  critic.py  grounding.py  run.py  store.py  tools.py
lab3/agent/observability/: __init__.py
lab4/agent/: agent.py  api.py  critic.py  grounding.py  models.py  run.py  store.py  tools.py
lab4/agent/observability/: __init__.py
lab4/db/: init.sql
planning/: index.html
prerequisites/: index.html
reference/manual-agent/: index.html
resources/: index.html
scripts/: check_llm.py  reset_db.py
search/: search_index.json
slides/: index.html
tests/: test_models.py
