[project]
name = "ai-agents-workshop"
version = "0.1.0"
description = "Hands-on workshop: building, observing, improving, and securing AI agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "streamlit>=1.45",
    "requests>=2.32",
    "openai>=1.0",
    "langgraph>=0.4",
    "langchain-openai>=0.3",
    "langfuse>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "lab1", "lab2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
