[project]
name = "ai-agents-workshop"
version = "0.1.0"
description = "Hands-on workshop: building, observing, improving, and securing AI agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "streamlit>=1.45",
    "requests>=2.32",
    "langgraph>=0.4",
    "langchain>=0.3",
    "langchain-experimental>=0.3",
    "python-dotenv>=1.0",
    "langfuse>=2.0",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
]

[project.optional-dependencies]
gemini = ["langchain-google-genai>=2.0"]
openai = ["langchain-openai>=0.3", "openai>=1.0"]
anthropic = ["langchain-anthropic>=0.3"]
guardian = ["ollama>=0.4"]
postgres = ["psycopg[binary]>=3.1", "psycopg_pool>=3.1"]

[project.scripts]
reset-db = "scripts.reset_db:main"

[tool.hatch.build.targets.wheel]
packages = ["app", "lab1", "lab2", "lab3", "lab4", "scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.0"]
